[project]
name = "disco-sparse-array"
dynamic = ["version"]                      # <-- version comes from git
description = "Sparse vector and matrix classes with fast operations for Disco simulations"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Michiel Jansen" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=2.3"
]

[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.11",
  "numpy>=1.23",
  "pandas>=2.3",
  "setuptools-scm>=8",
  "pytest>=8.4",
  "pytest-cov>=5",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
editable.mode = "redirect"
wheel.packages = ["src/sparse_array"]

# Tell scikit-build-core to get [project].version from setuptools-scm
[tool.scikit-build.metadata]
version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "src/sparse_array/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"
# Optional: if you use a custom tag style, uncomment and adjust:
# tag_regex = "^(?:v)?(?P<version>\\d+\\.\\d+\\.\\d+(?:[.-]rc\\d+)?)$"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "mypy>=1.10",
  # Optional but handy during dev:
  "cibuildwheel>=2.20",
  "pybind11-stubgen>=2.5",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.cibuildwheel]
skip = "*-win32"
test-command = "pytest -q {project}/tests"
environment = { PIP_ONLY_BINARY = "numpy, pandas" }

[tool.cibuildwheel.windows]
archs = ["AMD64"]

